--- a/src/Pages/Register/Register.css
+++ b/src/Pages/Register/Register.css
@@ -6,7 +6,7 @@
     margin-top: 20px;
     text-align: center;
 }
-.form-container input{
+.form-container input:not([type=checkbox]){
     display: block;
     width: 100%;
     height: 50px;
